--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
                             fill="#000" />
                     </svg>
                 </button>
+
+                <form class="form modal-form">
+                    <h3 class="title">Оставьте свои данные, мы вам перезвоним</h3>
+                    <div class="form-field">
+                        <label for="user-name">Имя</label>
+                        <input type="text" name="user-name" id="user-name">
+                    </div>
+                
+                    <div class="form-field">
+                        <label for="user-phone">Телефон</label>
+                        <input type="tel" name="user-phone" id="user-phone">
+                    </div>
+
+                   <div class="form-field">
+                    <label for="user-mail">Почта</label>
+                    <input type="email" name="user-mail" id="user-mail">
+                   </div>
+                   
+                    <label for="user-comment">Комментарий</label>
+                    <textarea name="comment" rows="5" placeholder="Введите текст" id="user-comment"></textarea>
+
+                    <input type="checkbox" name="terms" value ="terms" id="terms" checked>
+                    <label for="terms">Соглашаюсь с рассылкой и принимаю Условия договора</label>
+
+                    <button type="submit">Отправить</button>
+                </form>
+
             </div>
         </div>
 
