--- a/index.html
+++ b/index.html
@@ -65,21 +65,30 @@
                     </svg>
                 </button>
 
+                <strong class="form-title">Оставьте свои данные, мы вам перезвоним</strong>
                 <form class="form modal-form">
-                    <h2 class="title">Оставьте свои данные, мы вам перезвоним</h2>
                     <div class="form-field">
                         <label for="user-name">Имя</label>
-                        <input type="text" name="user-name" id="user-name">
+                        <input class="form-input" type="text" name="user-name" id="user-name">
+                        <svg class="form-modal-icon" width="18" height="18">
+                            <use href="./images/form-sprite.svg#icon-user"></use>
+                        </svg>
                     </div>
                 
                     <div class="form-field">
                         <label for="user-phone">Телефон</label>
-                        <input type="tel" name="user-phone" id="user-phone">
+                        <input class="form-input" type="tel" name="user-phone" id="user-phone">
+                        <svg class="form-modal-icon" width="18" height="18">
+                            <use href="./images/form-sprite.svg#icon-phone"></use>
+                        </svg>
                     </div>
 
                    <div class="form-field">
                         <label for="user-mail">Почта</label>
-                        <input type="email" name="user-mail" id="user-mail">
+                        <input class="form-input" type="email" name="user-mail" id="user-mail">
+                        <svg class="form-modal-icon" width="18" height="18">
+                            <use href="./images/form-sprite.svg#icon-mail"></use>
+                        </svg>
                    </div>
                    
                     <div class="form-field comment">
