Зробив форму для footer

--- a/index.html
+++ b/index.html
@@ -436,6 +436,22 @@
                     </li>
                 </ul>
             </div>
+            
+        <div class="footer-subscription">
+            <strong class="form-footer-title">Подпишитесь на рассылку</strong>
+            <form class="form-footer">
+                <label class="form-footer-field">
+                    <input class="form-footer-input" type="email" placeholder="E-mail">
+                </label>
+
+                <button class="form-footer-btn" type="submit">Подписаться
+                    <svg class="form-footer-icon" width="24" height="24">
+                        <use href="./images/form-sprite.svg#icon-send"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
+            
         </div>
 
     </footer>
